--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gliff-ai/jest-browserstack-automate",
-  "version": "4.0.3",
+  "version": "4.1.0",
   "description": "Simple harness for running Automate tests with Jest",
   "main": "index.js",
   "private": false,
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/gliff-ai/jest-browserstack-automate#readme",
   "dependencies": {
+    "@percy/cli": "^1.0.0-beta.70",
+    "@percy/selenium-webdriver": "^1.0.0",
     "browserstack-local": "^1.4.8",
     "jest": "^27.3.1",
     "selenium-webdriver": "^4.0.0"
