--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "https://github.com/gliff-ai/jest-browserstack-automate#readme",
   "dependencies": {
-    "@percy/cli": "==1.0.0-beta.70",
-    "@percy/selenium-webdriver": "^1.0.2",
-    "browserstack-local": "^1.4.9",
-    "jest": "^27.5.1",
-    "selenium-webdriver": "^4.1.2"
+    "@percy/cli": "^1.0.0-beta.70",
+    "@percy/selenium-webdriver": "==1.0.2",
+    "browserstack-local": "==1.4.8",
+    "jest": "==27.3.1",
+    "selenium-webdriver": "==4.0.0"
   }
 }
