--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "homepage": "https://github.com/gliff-ai/jest-browserstack-automate#readme",
   "dependencies": {
     "@percy/cli": "^1.0.0-beta.70",
-    "@percy/selenium-webdriver": "==1.0.2",
+    "@percy/selenium-webdriver": "==1.0.0",
     "browserstack-local": "==1.4.8",
     "jest": "==27.3.1",
-    "selenium-webdriver": "==4.1.1"
+    "selenium-webdriver": "~4.0.19"
   }
 }
