--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "url": "https://github.com/gliff-ai/jest-browserstack-automate/issues"
   },
   "homepage": "https://github.com/gliff-ai/jest-browserstack-automate#readme",
-  "dependencies": {
-    "@percy/cli": "==1.0.0-beta.70",
-    "@percy/selenium-webdriver": "==1.0.0",
-    "browserstack-local": "==1.4.8",
-    "jest": "==27.3.1",
-    "selenium-webdriver": "~4.0.0"
+  "peerDependencies": {
+    "@percy/cli": "^1.1.0",
+    "@percy/selenium-webdriver": "^1.0.2",
+    "browserstack-local": "^1.5.0",
+    "jest": "^27.5.1",
+    "selenium-webdriver": "^4.1.2"
   }
 }
