--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gliff-ai/jest-browserstack-automate",
-  "version": "5.0.2",
+  "version": "6.0.1",
   "description": "Simple harness for running Automate tests with Jest",
   "main": "index.js",
   "private": false,
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/gliff-ai/jest-browserstack-automate#readme",
   "peerDependencies": {
-    "@percy/cli": "^1.1.0",
-    "@percy/selenium-webdriver": "^1.0.2",
+    "@percy/cli": "==1.0.0-beta.76",
+    "@percy/selenium-webdriver": "^1.0.0",
     "browserstack-local": "^1.5.0",
     "jest": "^27.5.1",
     "selenium-webdriver": "^4.1.2"
