--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "@percy/selenium-webdriver": "^1.0.0",
     "browserstack-local": "^1.5.0",
     "jest": "^27.5.1",
-    "selenium-webdriver": "^4.1.2"
+    "selenium-webdriver": "==4.0.0"
   }
 }
